--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnTogether"
-        tools:targetApi="31">
-        <activity
-            android:name=".Login"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterMenu"
-            android:exported="false" />
-        <activity
-            android:name=".Register"
-            android:exported="false" />
+        tools:targetApi="31"
 
-        <service
-            android:name=".ServiceSocket"
-            android:enabled="true"
-            android:exported="true"
-            android:foregroundServiceType="dataSync"/>
+        android:usesCleartextTraffic="true">
+
+        <activity
+            android:name=".ActivityLogin"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityRegisterMenu"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityRegister"
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
