--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,9 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnTogether"
-        tools:targetApi="31"
-
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <service
+            android:name=".API.NotificationService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity
             android:name=".ActivityLogin"
@@ -28,7 +33,6 @@
         <activity
             android:name=".ActivityRegister"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
