--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.learntogether"
-        minSdk 28
+        minSdk 30
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.2'
     implementation 'androidx.navigation:navigation-ui:2.5.2'
     implementation 'com.google.android.material:material:1.5.0'
+    implementation 'org.json:json:20210307'
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
