--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityComments"
+            android:exported="false"
+            android:label="@string/title_activity_comments"
+            android:theme="@style/Theme.LearnTogether" />
+        <activity
             android:name=".ActivityCentral"
             android:exported="false" />
 
