--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SubActivity.CreateAskOnTheForum"
+            android:exported="false" />
+        <activity
             android:name=".ActivityComments"
             android:exported="false"
             android:label="@string/title_activity_comments"
